<resources>
    <string name="app_name">Nhom03_OrganiCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">Xin chào!!!</string>
    <string name="logo">Logo</string>
    <string name="banner">Banner</string>
    <string name="search_here">Tìm kiếm</string>
    <string name="category">Danh mục</string>
    <string name="best_seller">Sản phẩm bán chạy</string>
    <string name="fruits">Trái cây</string>
    <string name="edit"><u>Chỉnh sửa</u></string>
    <string name="click_here"><u><i>Bấm tại đây để chọn</i></u></string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="passwordchecked">Nhập lại mật khẩu</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="registerAccount">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="forgot"><u>Quên mật khẩu</u></string>
    <string-array name="weight">
        <item>100 gram</item>
        <item>300 gram</item>
        <item>1 kg</item>
        <item>5 kg</item>
    </string-array>
    <string name="new_account"><u>Đăng ký</u></string>
</resources>