<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<!--        <Button-->
<!--            android:id="@+id/btnBack"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:background="@drawable/ic_baseline_arrow_back"/>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registerAccount"
            android:textSize="24sp"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:drawableStart="@drawable/ic_account"
        android:hint="@string/account"
        android:paddingStart="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edtPhonenumber"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/phonenumber"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="@color/grey"
        android:drawableStart="@drawable/ic_account"
        android:layout_margin="20dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="@color/grey"
        android:drawableStart="@drawable/ic_account"
        android:layout_margin="20dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edtPasswordChecked"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/passwordchecked"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="@color/grey"
        android:drawableStart="@drawable/ic_account"
        android:layout_margin="20dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="@color/grey"
        android:drawableStart="@drawable/ic_account"
        android:layout_margin="20dp"
        tools:ignore="RtlSymmetry" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/light_blue"
        android:layout_gravity="center"/>

</LinearLayout>